Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-3264

Fix Erlang 16 namespaced types

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.9.3
    • 0.9.3
    • Erlang - Compiler
    • None

    Description

      Using the default Erlang from Ubuntu Trusty 1:16.b.3-dfsg-1ubuntu2.1 errors related to namespaced dict and set occur. These were namespaced in Erlang OTP 18, however this causes incompatibility with Erlang OTP 16.

      test/gen-erl/thrift1475_types.hrl:30: referring to built-in type set as a remote type; please take out the module name
      test/gen-erl/thrift_test_types.hrl:48: referring to built-in type dict as a remote type; please take out the module name
      ...
      

      Attachments

        Issue Links

          Activity

            People

              nsuke Nobuaki Sukegawa
              thecodeboss Michael Oliver
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: