THRIFT-3264 Fix Erlang 16 namespaced types Client: Erlang Patch: Nobuaki Sukegawa <nsukeg@gmail.com>

This closes #566