lib/erl/test/test_thrift_3214.erl
@@ -23,6 +23,7 @@
 -include("gen-erl/thrift3214_types.hrl").
 
 -ifdef(TEST).
+-ifndef(otp16_or_less).
 -include_lib("eunit/include/eunit.hrl").
 
 record_generation_test_() ->
@@ -55,4 +56,5 @@ struct_info_test_() ->
     )}
   ].
 
+-endif.
 -endif.
